# laminarforge-imaging-ml

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: .gitignore
data/example/: C1-S1_2026-04-20T12-00-00_brightfield.tif  C1-S1_2026-04-20T12-00-00_calcein.tif  C1-S1_2026-04-20T12-00-00_hoechst.tif  C1-S1_2026-04-20T12-00-00_pi.tif
models/: README.md
scripts/: make_example_images.py
src/lfimaging/: __init__.py  barrier.py  cli.py  ingest.py  livedead.py  nuclear.py  pipeline.py  publish.py  segmentation.py  train_livedead.py  unet.py
tests/: test_pipeline.py
